force-app/main/default/objects/Region__c/fields/CLC_Total_Relationship_Max_Authority__c.field-meta.xml
<CustomField>
    <fullName>CLC_Total_Relationship_Max_Authority__c</fullName>
    <label>CLC - Total Relationship Max Authority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>