force-app/main/default/objects/Region__c/fields/LookupKey__c.field-meta.xml
<CustomField>
    <fullName>LookupKey__c</fullName>
    <externalId>true</externalId>
    <label>LookupKey</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>