force-app/main/default/objects/Region__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CLC_Total_Relationship_Max_Authority__c</columns>
    <columns>RDLC_Total_Relationship_Max_Authority__c</columns>
    <columns>SLC_Total_Relationship_Max_Authority__c</columns>
    <columns>Lenders_can_use_10_Rule__c</columns>
    <columns>LookupKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>